# synalysis2kaitai

./: .gitignore  .gitlab-ci.yml  ReadMe.md  collect.py  pyproject.toml  realTest.py  schema.py
Synalysis2Kaitai/: KSAST.py  SynalysisAST.py  __init__.py  __main__.py  enum.py  number.py  pathTracer.py  utils.py
lists/: checked_OK.txt  checked_OK_but_requires_path_tracer.txt  not_ok.txt  on_hold.txt  tested_OK.txt
realTests/: bmp.yaml  bson.yaml  csv.yaml  gif.yaml  jpeg.yaml  mbr.yaml  png.yaml  wav.yaml  zip.yaml
scripts/: config.sh  setup.sh  test.sh
tests/: enum_binary.grammar  enum_int.grammar  masks.grammar  masks_unordered.grammar  merging.grammar  primitives.grammar  references.grammar  signature.grammar
tests/results/: enum_binary.ksy  enum_int.ksy  masks.ksy  merging.ksy  primitives.ksy  references.ksy  signature.ksy
